--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@ body {
   background: #EEE;
 }
 
-.text { font-size: 3em; }
+.text { font-size: 3vw; }
 .flip-clock {
   text-align: center;
   perspective: 400px;
-  margin: 2px auto;
 
   *,
   *:before,
