--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="manifest" href="manifest.json">
 <style>
 html { height: 100%; }
-media screen and (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
+@media screen and (orientation: portrait) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
