--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@ function Clock(startPoint) {
 var startingPoint = 0; // 4500000000;
 var clock = new Clock(startingPoint);
 document.getElementById('ticker').appendChild(clock.el);
+document.body.addEventListener('click', (e) => document.location.href = "https://linktr.ee/faukus", true);
 
 </script>
 </body>
