--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+  opacity: 1;
   background-size: cover;
-  animation: fadeAnimation ease 5s;
+  animation: fadeOutAnimation ease 9s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
 
-@keyframes fadeAnimation {
+@keyframes fadeOutAnimation {
     0% {
 	opacity: 1;
     }
@@ -48,6 +49,11 @@ body {
 .content {
 	position: relative;
 	text-align: center;
+	opacity: 0;
+	animation: fadeOutAnimation ease 5s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+	animation-direction: reverse;
 }
 
 .text {
